Applied material theme to login and register page

--- a/VidlyAuth/Views/Shared/_SIdebar.cshtml
+++ b/VidlyAuth/Views/Shared/_SIdebar.cshtml
@@ -19,7 +19,7 @@
         }
     }
     <li><a class="waves-effect" href="/account/register" id="registerLink">Register</a></li>
-    <li><a class="waves-effect" href="/account/register" id="loginLink">Login</a></li>
+    <li><a class="waves-effect" href="/account/login" id="loginLink">Login</a></li>
     <li><div class="divider"></div></li>
     <li><a class="subheader">Menu</a></li>
     <li><a class="waves-effect" href="/"><i class="material-icons">home</i>Home</a></li>
