--- a/VidlyAuth/Content/materializecss/custom.css
+++ b/VidlyAuth/Content/materializecss/custom.css
@@ -30,3 +30,11 @@
 .card-reveal {
     height: 101% !important;
 }
+
+.field-validation-error {
+    color: red;
+}
+
+.input-validation-error {
+    border-bottom: 1px solid red !important;
+}
