--- a/VidlyAuth/Views/Account/Register.cshtml
+++ b/VidlyAuth/Views/Account/Register.cshtml
@@ -3,9 +3,49 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="container row">
+    <h2 class="header">@ViewBag.Title</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    <div class="row">
+        <div class="col s12 m6">
+            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">Create a new account.</span>
+                <div class="row">
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    <div class="input-field col s12">
+                        @Html.LabelFor(m => m.Email, new { @class = "validate" })
+                        @Html.TextBoxFor(m => m.Email)
+                        @Html.ValidationMessageFor(m => m.Email)
+                    </div>
+                    <div class="input-field col s12">
+                        @Html.LabelFor(m => m.Password, new { @class = "validate" })
+                        @Html.PasswordFor(m => m.Password)
+                        @Html.ValidationMessageFor(m => m.Password)
+                    </div>
+                    <div class="input-field col s12">
+                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "validate" })
+                        @Html.PasswordFor(m => m.ConfirmPassword)
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword)
+                    </div>
+                </div>
+            </div>
+            <div class="card-action">
+                <input type="submit" class="btn btn-default" value="Register" />
+            </div>
+        </div>
+}
+        </div>
+    </div>
+</div>
+
+
+
+
+@*@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
@@ -34,7 +74,7 @@
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
-}
+}*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
