--- a/VidlyAuth/Views/Home/About.cshtml
+++ b/VidlyAuth/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="row container">
+    <h2 class="header">ASP.NET Material Design</h2>
+    <p class="grey-text text-darken-3 lighten-3">Use this area to provide additional information.</p>
+</div>
