--- a/VidlyAuth/Views/Account/Login.cshtml
+++ b/VidlyAuth/Views/Account/Login.cshtml
@@ -19,9 +19,9 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
                         <div class="input-field col s12">
-                            @Html.LabelFor(m => m.Email, new { @class = "validate" })
-                            @Html.TextBoxFor(m => m.Email)
-                            @Html.ValidationMessageFor(m => m.Email)
+                            @Html.LabelFor(m => m.Username, new { @class = "validate" })
+                            @Html.TextBoxFor(m => m.Username)
+                            @Html.ValidationMessageFor(m => m.Username)
                         </div>
                         <div class="input-field col s12">
                             @Html.LabelFor(m => m.Password, new { @class = "validate" })
