--- a/VidlyAuth/Views/Shared/_SIdebar.cshtml
+++ b/VidlyAuth/Views/Shared/_SIdebar.cshtml
@@ -27,7 +27,7 @@
     <li><a class="subheader">Pages</a></li>
     <li><a class="waves-effect" href="/"><i class="material-icons">home</i>Home</a></li>
     <li><a class="waves-effect" href="/home/about"><i class="material-icons">info</i>About</a></li>
-    <li><a class="waves-effect" href="/home/contact"><i class="material-icons">movie</i>Contact</a></li>
+    <li><a class="waves-effect" href="/home/contact"><i class="material-icons">email</i>Contact</a></li>
     @if (Request.IsAuthenticated)
     {
         <li><div class="divider"></div></li>
