--- a/VidlyAuth/Views/Shared/_Layout.cshtml
+++ b/VidlyAuth/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 
     @Html.Partial("_Sidebar")
 
-    <div class="container-fluid body-content">
+    <div id="main-container" class="container-fluid body-content">
         @RenderBody()
     </div>
 
