--- a/VidlyAuth/Views/Customers/CustomerForm.cshtml
+++ b/VidlyAuth/Views/Customers/CustomerForm.cshtml
@@ -45,7 +45,7 @@
                             </div>
                             <div class="input-field col m8">
                                 @Html.LabelFor(m => m.Birthdate)
-                                @Html.TextBoxFor(m => m.Birthdate, "{0:MMM d, yyyy}", new { @class = "datepicker" })
+                                @Html.TextBoxFor(m => m.Birthdate, "{0:MMM d, yyyy}", new { @class = "datepicker", @readonly = true })
                                 @Html.ValidationMessageFor(m => m.Birthdate)
                             </div>
                             <div class="input-field col s12 m8">
